fixed latest articles on mobile

--- a/components/latestarticle.module.css
+++ b/components/latestarticle.module.css
@@ -10,13 +10,13 @@
 }
 
 .container {
-  width: 30vw;
+  min-width: 45vw;
   margin-right: 30px;
 }
 
 .image {
   width: 100%;
-  height: 40%;
+  height: 60%;
   object-fit: cover;
 }
 
